re PR debug/43670 ("-fcompare-debug failure (length)" with -O -ftree-vrp)

PR debug/43670
	* cfgexpand.c (expand_debug_expr): If for non-NULL offset
	op0 is not a MEM, just return NULL instead of assertion
	failure.
	(discover_nonconstant_array_refs): Don't walk debug stmts.

	* gcc.dg/pr43670.c: New test.

From-SVN: r158109